--- a/Dockerfile1_copy
+++ b/Dockerfile1_copy
@@ -1,22 +1,33 @@
 # base stage
+# 使用 Ubuntu 22.04 作为基础镜像，并给这个阶段命名为 base。
+# 第一阶段：base 阶段（基础镜像与依赖安装）
 FROM ubuntu:22.04 AS base
+# 切换到 root 用户执行后续命令。
 USER root
+# 指定使用 /bin/bash -c 来执行 RUN 等命令，而不是默认的 sh。
 SHELL ["/bin/bash", "-c"]
 
+# 定义两个构建时参数：
 ARG NEED_MIRROR=0
 ARG LIGHTEN=0
 ENV LIGHTEN=${LIGHTEN}
 
+# 设置工作目录为 /ragflow，后续操作都在此目录下。
 WORKDIR /ragflow
 
 # Copy models downloaded via download_deps.py
+# 创建用于存放模型数据的目录。
 RUN mkdir -p /ragflow/rag/res/deepdoc /root/.ragflow
+# 从 infiniflow/ragflow_deps:latest 镜像中挂载 /huggingface.co 目录。
+  #将其中的一些模型文件复制到 /ragflow/rag/res/ 和 /ragflow/rag/res/deepdoc 中。
+  #使用 tar 压缩并解压以去掉目录层级。
 RUN --mount=type=bind,from=infiniflow/ragflow_deps:latest,source=/huggingface.co,target=/huggingface.co \
     cp /huggingface.co/InfiniFlow/huqie/huqie.txt.trie /ragflow/rag/res/ && \
     tar --exclude='.*' -cf - \
         /huggingface.co/InfiniFlow/text_concat_xgb_v1.0 \
         /huggingface.co/InfiniFlow/deepdoc \
-        | tar -xf - --strip-components=3 -C /ragflow/rag/res/deepdoc
+        | tar -xf - --strip-components=3 -C /ragflow/rag/res/deepdoc \
+# 如果不是轻量模式 (LIGHTEN != 1)，则再复制一些模型到 /root/.ragflow。
 RUN --mount=type=bind,from=infiniflow/ragflow_deps:latest,source=/huggingface.co,target=/huggingface.co \
     if [ "$LIGHTEN" != "1" ]; then \
         (tar -cf - \
@@ -27,12 +38,14 @@ RUN --mount=type=bind,from=infiniflow/ragflow_deps:latest,source=/huggingface.co
 
 # https://github.com/chrismattmann/tika-python
 # This is the only way to run python-tika without internet access. Without this set, the default is to check the tika version and pull latest every time from Apache.
+# 从 infiniflow/ragflow_deps 镜像复制 nltk 数据、tika jar 文件、tiktoken 编码文件。
 RUN --mount=type=bind,from=infiniflow/ragflow_deps:latest,source=/,target=/deps \
     cp -r /deps/nltk_data /root/ && \
     cp /deps/tika-server-standard-3.0.0.jar /deps/tika-server-standard-3.0.0.jar.md5 /ragflow/ && \
     cp /deps/cl100k_base.tiktoken /ragflow/9b5ad71b2ce5302211f9c61530b329a4922fc6a4
-
+# 设置环境变量，指定本地 tika jar 路径。
 ENV TIKA_SERVER_JAR="file:///ragflow/tika-server-standard-3.0.0.jar"
+# 避免在 apt 安装过程中弹出交互式提示。
 ENV DEBIAN_FRONTEND=noninteractive
 
 # Setup apt
@@ -42,6 +55,14 @@ ENV DEBIAN_FRONTEND=noninteractive
 # python-pptx:   default-jdk                              tika-server-standard-3.0.0.jar
 # selenium:      libatk-bridge2.0-0                       chrome-linux64-121-0-6167-85
 # Building C extensions: libpython3-dev libgtk-4-1 libnss3 xdg-utils libgbm-dev
+# 使用清华源替换官方源（如果 NEED_MIRROR=1）。
+  #设置 apt 缓存保留下载的包。
+  #更新 apt 并安装各种依赖库和工具，包括：
+  #图形相关库（opencv、GTK）
+  #JDK（用于 Python-PPTX）
+  #浏览器相关库（Selenium）
+  #Python 工具链
+  #其他实用工具（curl、git、vim、ghostscript）
 RUN --mount=type=cache,id=ragflow_apt,target=/var/cache/apt,sharing=locked \
     if [ "$NEED_MIRROR" == "1" ]; then \
         sed -i 's|http://ports.ubuntu.com|http://mirrors.tuna.tsinghua.edu.cn|g' /etc/apt/sources.list; \
@@ -62,6 +83,8 @@ RUN --mount=type=cache,id=ragflow_apt,target=/var/cache/apt,sharing=locked \
     apt install -y python3-pip pipx nginx unzip curl wget git vim less && \
     apt install -y ghostscript
 
+# 如果需要镜像，则配置 pip 和 uv 使用阿里云 PyPI 镜像。
+  #安装 Python 依赖管理工具 uv
 RUN if [ "$NEED_MIRROR" == "1" ]; then \
         pip3 config set global.index-url https://mirrors.aliyun.com/pypi/simple && \
         pip3 config set global.trusted-host mirrors.aliyun.com; \
@@ -72,10 +95,14 @@ RUN if [ "$NEED_MIRROR" == "1" ]; then \
     fi; \
     pipx install uv
 
+# 设置 Python 不生成 .pyc 文件。
+  #设置 .NET 环境为不使用区域设置。
+  #将用户本地 bin 加入 PATH。
 ENV PYTHONDONTWRITEBYTECODE=1 DOTNET_SYSTEM_GLOBALIZATION_INVARIANT=1
 ENV PATH=/root/.local/bin:$PATH
 
 # nodejs 12.22 on Ubuntu 22.04 is too old
+# 安装较新版本的 Node.js（20.x），移除旧版本。
 RUN --mount=type=cache,id=ragflow_apt,target=/var/cache/apt,sharing=locked \
     curl -fsSL https://deb.nodesource.com/setup_20.x | bash - && \
     apt purge -y nodejs npm cargo && \
@@ -84,6 +111,8 @@ RUN --mount=type=cache,id=ragflow_apt,target=/var/cache/apt,sharing=locked \
     apt install -y nodejs
 
 # A modern version of cargo is needed for the latest version of the Rust compiler.
+# 安装 rustup 并使用清华镜像加速下载。
+  #设置 Rust 环境变量。
 RUN apt update && apt install -y curl build-essential \
     && if [ "$NEED_MIRROR" == "1" ]; then \
          # Use TUNA mirrors for rustup/rust dist files
@@ -95,6 +124,7 @@ RUN apt update && apt install -y curl build-essential \
     curl --proto '=https' --tlsv1.2 --http1.1 -sSf https://sh.rustup.rs | bash -s -- -y --profile minimal \
     && echo 'export PATH="/root/.cargo/bin:${PATH}"' >> /root/.bashrc
 
+# 验证安装成功。
 ENV PATH="/root/.cargo/bin:${PATH}"
 
 RUN cargo --version && rustc --version
@@ -102,6 +132,7 @@ RUN cargo --version && rustc --version
 # Add msssql ODBC driver
 # macOS ARM64 environment, install msodbcsql18.
 # general x86_64 environment, install msodbcsql17.
+# 添加微软源，根据架构安装对应的 ODBC 驱动。
 RUN --mount=type=cache,id=ragflow_apt,target=/var/cache/apt,sharing=locked \
     curl https://packages.microsoft.com/keys/microsoft.asc | apt-key add - && \
     curl https://packages.microsoft.com/config/ubuntu/22.04/prod.list > /etc/apt/sources.list.d/mssql-release.list && \
@@ -119,10 +150,13 @@ RUN --mount=type=cache,id=ragflow_apt,target=/var/cache/apt,sharing=locked \
 
 
 # Add dependencies of selenium
+# 安装 Selenium 所需浏览器及驱动
+# 解压 Chrome 浏览器二进制包，并创建软链接。
 RUN --mount=type=bind,from=infiniflow/ragflow_deps:latest,source=/chrome-linux64-121-0-6167-85,target=/chrome-linux64.zip \
     unzip /chrome-linux64.zip && \
     mv chrome-linux64 /opt/chrome && \
-    ln -s /opt/chrome/chrome /usr/local/bin/
+    ln -s /opt/chrome/chrome /usr/local/bin/ \
+# 解压 chromedriver，并将其移动到 PATH 中。
 RUN --mount=type=bind,from=infiniflow/ragflow_deps:latest,source=/chromedriver-linux64-121-0-6167-85,target=/chromedriver-linux64.zip \
     unzip -j /chromedriver-linux64.zip chromedriver-linux64/chromedriver && \
     mv chromedriver /usr/local/bin/ && \
@@ -130,6 +164,7 @@ RUN --mount=type=bind,from=infiniflow/ragflow_deps:latest,source=/chromedriver-l
 
 # https://forum.aspose.com/t/aspose-slides-for-net-no-usable-version-of-libssl-found-with-linux-server/271344/13
 # aspose-slides on linux/arm64 is unavailable
+# 安装 Aspose.Slides 所需的 libssl
 RUN --mount=type=bind,from=infiniflow/ragflow_deps:latest,source=/,target=/deps \
     if [ "$(uname -m)" = "x86_64" ]; then \
         dpkg -i /deps/libssl1.1_1.1.1f-1ubuntu2_amd64.deb; \
@@ -139,16 +174,21 @@ RUN --mount=type=bind,from=infiniflow/ragflow_deps:latest,source=/,target=/deps 
 
 
 # builder stage
+# 从 base 阶段继续构建，命名为 builder。
+# 第二阶段：builder 阶段（依赖安装和前端编译）
 FROM base AS builder
 USER root
 
 WORKDIR /ragflow
 
 # install dependencies from uv.lock file
+# 复制项目依赖定义文件。
 COPY pyproject.toml uv.lock ./
 
 # https://github.com/astral-sh/uv/issues/10462
 # uv records index url into uv.lock but doesn't failover among multiple indexes
+# 替换 uv.lock 中的源地址（可选）。
+  #使用 uv 安装 Python 依赖。
 RUN --mount=type=cache,id=ragflow_uv,target=/root/.cache/uv,sharing=locked \
     if [ "$NEED_MIRROR" == "1" ]; then \
         sed -i 's|pypi.org|mirrors.aliyun.com/pypi|g' uv.lock; \
@@ -161,13 +201,15 @@ RUN --mount=type=cache,id=ragflow_uv,target=/root/.cache/uv,sharing=locked \
         uv sync --python 3.10 --frozen --all-extras; \
     fi
 
+# 复制前端代码，安装 npm 包并构建。
 COPY web web
 COPY docs docs
 RUN --mount=type=cache,id=ragflow_npm,target=/root/.npm,sharing=locked \
     cd web && npm install && npm run build
 
+# 复制 Git 信息。
 COPY .git /ragflow/.git
-
+# 获取 Git 版本号并写入 VERSION 文件。
 RUN version_info=$(git describe --tags --match=v* --first-parent --always); \
     if [ "$LIGHTEN" == "1" ]; then \
         version_info="$version_info slim"; \
@@ -177,7 +219,10 @@ RUN version_info=$(git describe --tags --match=v* --first-parent --always); \
     echo "RAGFlow version: $version_info"; \
     echo $version_info > /ragflow/VERSION
 
+
 # production stage
+# 第三阶段：production 阶段（最终运行环境）
+# 使用 base 阶段为基础镜像，进入最终生产阶段。
 FROM base AS production
 USER root
 
@@ -185,36 +230,33 @@ WORKDIR /ragflow
 
 # Copy Python environment and packages
 ENV VIRTUAL_ENV=/ragflow/.venv
+# 从 builder 阶段复制虚拟环境。
 COPY --from=builder ${VIRTUAL_ENV} ${VIRTUAL_ENV}
 ENV PATH="${VIRTUAL_ENV}/bin:${PATH}"
-
+# 设置 Python 模块路径。
 ENV PYTHONPATH=/ragflow/
 
-#COPY web web
-#COPY api api
-#COPY conf conf
-#COPY deepdoc deepdoc
-#COPY rag rag
-#COPY agent agent
-#COPY graphrag graphrag
-#COPY agentic_reasoning agentic_reasoning
-#COPY pyproject.toml uv.lock ./
-#COPY mcp mcp
-#COPY plugin plugin
-
+# 复制所有应用代码。
+COPY web web
+COPY api api
+COPY conf conf
+COPY deepdoc deepdoc
+COPY rag rag
+COPY agent agent
+COPY graphrag graphrag
+COPY agentic_reasoning agentic_reasoning
+COPY pyproject.toml uv.lock ./
+COPY mcp mcp
+COPY plugin plugin
+# 复制配置模板和启动脚本，并赋予执行权限。
 COPY docker/service_conf.yaml.template ./conf/service_conf.yaml.template
 COPY docker/entrypoint.sh ./
 RUN chmod +x ./entrypoint*.sh
 
 # Copy compiled web pages
+# 复制前端构建结果。
 COPY --from=builder /ragflow/web/dist /ragflow/web/dist
-
+# 复制版本号文件。
 COPY --from=builder /ragflow/VERSION /ragflow/VERSION
-
-
-#ENTRYPOINT ["./entrypoint.sh"]
-
-
-# 然后构建并推送这个基础镜像
-# docker build -t mycompany/ragflow-base:latest -f Dockerfile_1 .
-  #docker push mycompany/ragflow-base:latest
+# 指定容器启动时运行的入口脚本。
+ENTRYPOINT ["./entrypoint.sh"]
