--- a/Dockerfile3
+++ b/Dockerfile3
@@ -16,7 +16,7 @@ RUN --mount=type=bind,from=infiniflow/ragflow_deps:latest,source=/huggingface.co
     tar --exclude='.*' -cf - \
         /huggingface.co/InfiniFlow/text_concat_xgb_v1.0 \
         /huggingface.co/InfiniFlow/deepdoc \
-        | tar -xf - --strip-components=3 -C /ragflow/rag/res/deepdoc
+        | tar -xf - --strip-components=3 -C /ragflow/rag/res/deepdoc 
 RUN --mount=type=bind,from=infiniflow/ragflow_deps:latest,source=/huggingface.co,target=/huggingface.co \
     if [ "$LIGHTEN" != "1" ]; then \
         (tar -cf - \
@@ -161,10 +161,10 @@ RUN --mount=type=cache,id=ragflow_uv,target=/root/.cache/uv,sharing=locked \
         uv sync --python 3.10 --frozen --all-extras; \
     fi
 
-COPY web web
+#COPY web web
 COPY docs docs
-RUN --mount=type=cache,id=ragflow_npm,target=/root/.npm,sharing=locked \
-    cd web && npm install && npm run build
+#RUN --mount=type=cache,id=ragflow_npm,target=/root/.npm,sharing=locked \
+#    cd web && npm install && npm run build
 
 COPY .git /ragflow/.git
 
@@ -207,14 +207,9 @@ COPY docker/entrypoint.sh ./
 RUN chmod +x ./entrypoint*.sh
 
 # Copy compiled web pages
-COPY --from=builder /ragflow/web/dist /ragflow/web/dist
+#COPY --from=builder /ragflow/web/dist /ragflow/web/dist
 
 COPY --from=builder /ragflow/VERSION /ragflow/VERSION
-
-
 #ENTRYPOINT ["./entrypoint.sh"]
 
-
-# 然后构建并推送这个基础镜像
-# docker build -t mycompany/ragflow-base:latest -f Dockerfile_1 .
-  #docker push mycompany/ragflow-base:latest
+# docker build --build-arg LIGHTEN=1 -f Dockerfile3 -t infiniflow/ragflow:nightly-slim .
